--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,9 +48,14 @@ body
     background: white;
     padding: 1em;
 }
+#post #foto
+{
+    width: 40%;
+}
 #footer {
     background: #777;
     color: white;
     text-align: center;
     padding: 0.5em;
 }
+
